<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/etEdnom"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:hint="@string/nombre"/>

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/etEdtel"
        android:layout_below="@+id/etEdnom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/telefono"/>

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/etEdtel2"
        android:layout_below="@+id/etEdtel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/telefono"/>

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/etEdtel3"
        android:layout_below="@+id/etEdtel2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/telefono"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imgEdCont"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/foto" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/etEdtel3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btModificar"
            android:id="@+id/button"
            android:onClick="btEtModificar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btsubirFoto"
            android:id="@+id/button2"
            android:onClick="btEtSubirImagen"/>

        <Button
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:id="@+id/button3"
            android:onClick="btEtsalir"/>
    </LinearLayout>
</RelativeLayout>